# DroNet_TX2

./: README.md  project report.docx
HOST_component/keras_to_tf/: README
HOST_component/tf_to_uff/: tf_to_uff.py
TX2_component/bebop_ws/src/dronet_control/launch/: deep_navigation.launch
TX2_component/bebop_ws/src/dronet_perception/src/Dronet/: Dronet.py
TX2_component/bebop_ws/src/dronet_perception_trt/: CMakeLists.txt  package.xml
TX2_component/bebop_ws/src/dronet_perception_trt/include/dronet_perception_trt/: dronet.h
TX2_component/bebop_ws/src/dronet_perception_trt/launch/: dronet_launch.launch
TX2_component/bebop_ws/src/dronet_perception_trt/models/: model_tensorrt.uff
TX2_component/bebop_ws/src/dronet_perception_trt/src/: dronet.cpp  dronet_utils.cpp  dronet_utils.h
TX2_component/tensorRT/: Makefile  Makefile.config
TX2_component/tensorRT/common/: common.h
TX2_component/tensorRT/trtinference/: Makefile  trtinference.cpp  trtinference.h
